[gd_scene load_steps=3 format=3 uid="uid://dgcktkvlefs46"]

[ext_resource type="Script" uid="uid://dmehwlgbinroc" path="res://tick_button.gd" id="1_npk1i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sf8ej"]

[node name="TickButton" type="PanelContainer"]
anchors_preset = -1
anchor_top = 0.014
anchor_bottom = 0.014
offset_top = -35.84
offset_right = 80.0
offset_bottom = 109.16
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_sf8ej")
script = ExtResource("1_npk1i")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ValueLabel" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_type_variation = &"MediumLabel"
theme_override_font_sizes/font_size = 42
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonUp" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "▲"

[node name="ButtonDown" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "▼"

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonUp" to="." method="_on_button_up_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ButtonDown" to="." method="_on_button_down_pressed"]
